; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/smd/extr_smd_rpcrouter.c_rr_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/smd/extr_smd_rpcrouter.c_rr_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@smd_lock = common dso_local global i32 0, align 4
@smd_channel = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@rpcrouter_need_len = common dso_local global i32 0, align 4
@rpcrouter_wake_lock = common dso_local global i32 0, align 4
@smd_wait = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @rr_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rr_read(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  br label %8

8:                                                ; preds = %29, %2
  %9 = load i64, i64* %7, align 8
  %10 = call i32 @spin_lock_irqsave(i32* @smd_lock, i64 %9)
  %11 = load i32, i32* @smd_channel, align 4
  %12 = call i32 @smd_read_avail(i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = icmp sge i32 %12, %13
  br i1 %14, label %15, label %29

15:                                               ; preds = %8
  %16 = load i32, i32* @smd_channel, align 4
  %17 = load i8*, i8** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @smd_read(i32 %16, i8* %17, i32 %18)
  store i32 %19, i32* %6, align 4
  %20 = load i64, i64* %7, align 8
  %21 = call i32 @spin_unlock_irqrestore(i32* @smd_lock, i64 %20)
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %41

26:                                               ; preds = %15
  %27 = load i32, i32* @EIO, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %3, align 4
  br label %41

29:                                               ; preds = %8
  %30 = load i32, i32* %5, align 4
  store i32 %30, i32* @rpcrouter_need_len, align 4
  %31 = call i32 @wake_unlock(i32* @rpcrouter_wake_lock)
  %32 = load i64, i64* %7, align 8
  %33 = call i32 @spin_unlock_irqrestore(i32* @smd_lock, i64 %32)
  %34 = load i32, i32* @smd_wait, align 4
  %35 = load i32, i32* @smd_channel, align 4
  %36 = call i32 @smd_read_avail(i32 %35)
  %37 = load i32, i32* %5, align 4
  %38 = icmp sge i32 %36, %37
  %39 = zext i1 %38 to i32
  %40 = call i32 @wait_event(i32 %34, i32 %39)
  br label %8

41:                                               ; preds = %26, %25
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @smd_read_avail(i32) #1

declare dso_local i32 @smd_read(i32, i8*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @wake_unlock(i32*) #1

declare dso_local i32 @wait_event(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
